fixed uneven styling margin for cards

--- a/src/App.less
+++ b/src/App.less
@@ -50,8 +50,7 @@ h3 {
 // Ant Cards
 .ant-card {
   line-height: 1;
-  margin-bottom: 0px;
-  margin-right: 16px;
+  margin: 8px;
 }
 
 .ant-card:first-child {
